--- a/aulas/mod2-desafio10/style.css
+++ b/aulas/mod2-desafio10/style.css
@@ -37,32 +37,65 @@ Escala de Cores
 }
 
 body{
-    background-color: #c5ebd6;
+    background-color: #d2dfc3;
     font-family: var(--fonte-padrao);
     margin: auto;    
 }
 
+a.externo::after{
+    content: '\1f517';
+    font-size: .8em;
+}
+
 header{
-    background-color: var(--cor4);
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+    min-height: 150px;
+    text-align: center;
+    padding-top: 40px;
 }
 
 header > h1{
     color: white;
-    font-family: var(--fonte-destaque);
+    font-family: var(--fonte-roboto);
+    font-size: 3em;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 0px #0000009c;
+
 }
 
-header p {
+header > p {
     color: white;
+    font-size: 1.2em;
+    max-width: 600px;
+    margin: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-shadow: 2px 2px 0px #0000009c;
+
 }
 
 nav {
     background-color: var(--cor5);
+    padding: 10px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.322);
+}
+
+nav > a{
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    transition-duration: .5s; /*fading*/
+}
+
+nav > a:hover{
+    background-color: var(--cor3);
 }
 
 main{
     background-color: white;
     min-width: 300px;/*a partid de...ele se adapta*/
-    max-width: 1000px;/*com...ele para de crescer*/
+    max-width: 600px;/*com...ele para de crescer*/
     margin: auto; /*para centralizar automaticamente*/
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.404);
@@ -78,6 +111,34 @@ main h1{
 
 main h2{
     font-family: var(--fonte-android);
+    color: var(--cor4);
+    font-size: 1.3em;
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    text-indent: 8px;
+}
+
+main p {
+    margin: 15px 0px;
+    text-align: justify;
+    line-height: 1.5em; /*altura entre linhas*/
+    text-indent: 30px;
+}
+
+main strong {
+    color: var(--cor4);
+    font-weight: 800;
+}
+
+main a{
+    text-decoration: none;
+    color: var(--cor5);
+    background-color: var(--cor0);
+    padding: 2px 6px;
+}
+
+main a:hover{
+    text-decoration: underline;
+    color: var(--cor3);
 }
 
 main img{
@@ -85,13 +146,60 @@ main img{
 }
 
 main img.pequena{
-    width: 50%;
+    max-width: 250px;
     display: block;
     margin: auto;
+}
 
+div.video{
+    background-color: var(--cor4);
+    margin: 0px -20px 20px -20px;
+    padding: 10px;
+    padding-bottom: 59%;
+    position: relative;
+}
+
+div.video > iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
+aside{
+    background-color: var(--cor0);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+aside h3{
+    background-color: var(--cor4);
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+}
+aside > ul{
+    list-style-position: inside; /*bolinha para dentro/fora da caixa*/
+    columns: 2; /*dividir texto em colunas*/
+    list-style-type: '\2714\00a0'; /*00a0(ou 0020) é o espaço sem quebra*/
 }
 
 footer{
     background-color: var(--cor5);
     color: white;
+    text-align: center;
+    font-size: .8em;
+    padding: 5px;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+}
+
+footer a:hover{
+    color: var(--cor1);
+    text-decoration: underline;
+
 }
